[tool.poetry]
name = "sad-ify"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7.0"
pydub = "^0.25.1"
requests = "^2.26.0"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
